@@ -4,7 +4,7 @@ News
 Pyclewn 1.7
 -----------
 
-.. July 1, 2011
+.. July 19, 2011
 
 New feature
 ^^^^^^^^^^^
@@ -15,6 +15,9 @@ New feature
 Bug fixes
 ^^^^^^^^^
 
+* Fix the ``pdb`` debugger raises the ignored exception
+  ``AttributeError("'NoneType' object has no attribute 'Pdb'",) in function
+  _removeHandlerRef`` with Python 3.2.
 * Fix an unfolded watched variable of 500 elements causes 100% cpu use when
   the hiliting of all its elements is updated.
 * Fix ``inferior_tty.py`` uses 100% cpu.
