@@ -1,5 +1,6 @@
-2011-07-01  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2011-07-19  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
+	* vim.py pydb.py: Fix ignored AttributeError exception (pdb).
 	* debugger.py vim.py misc.py pydb.py: Implement the 'loglevel' pyclewn
 	command.
 	* netbeans.py misc.py: Use difflib.unified_diff to update the watched
